--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       # Change './actual-data' below to the path to the folder you want Actual to store its data in on your server.
       # '/data' is the path Actual will look for its files in by default, so leave that as-is.
       - ./actual-data:/data
-      - ./actual-backup:/app/actual-backup
-      - ./sync.js:/app/sync.js  # External synchrnoization script
+      - ./actual-cache:/app/actual-cache
+      - ./lib:/app/lib
+      - ./entry.js:/app/entry.js  # External synchrnoization script
     restart: unless-stopped
