handle multiple accounts with varying from-to exchange rates

--- a/Dockerfile.dual-actual
+++ b/Dockerfile.dual-actual
@@ -1,4 +1,4 @@
 FROM docker.io/actualbudget/actual-server:latest
 RUN npm install --save \
     @actual-app/api \
-    ecb-euro-exchange-rates
+    moment
