--- a/Dockerfile.dual-actual
+++ b/Dockerfile.dual-actual
@@ -1,4 +1,3 @@
 FROM docker.io/actualbudget/actual-server:latest
-RUN npm install --save \
-    @actual-app/api \
-    moment
+RUN cd /tmp && npm init -y && npm install @actual-app/api moment && \
+    cp -r node_modules/* /app/node_modules/ 2>/dev/null || true
